# bulletproofs

./: Cargo.toml
src/: generators.rs  inner_product_proof.rs  lib.rs  linear_proof.rs  transcript.rs  util.rs
src/r1cs/: constraint_system.rs  linear_combination.rs  proof.rs  prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
