[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - update CHANGELOG
version = "4.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>",
           "Michael Lodder <redmike7@gmail.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zkcrypto/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs"
edition = "2021"

[dependencies]
bls12_381_plus = "=0.5.3"
group = "=0.12.1"
# subtle = { package = "subtle-ng", version = "2.4", default-features = false }
subtle = { version = "2.4", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
digest = { version = "0.9.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "serde_derive"] }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
zeroize = "1"

[dev-dependencies]
hex = "0.4"
criterion = "0.4"
bincode = "1"
rand_chacha = "0.3"

[features]
default = ["std"]
yoloproofs = []
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
nightly = ["subtle/nightly"]
docs = ["nightly"]


[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "linear_proof"
harness = false
