[package]
name = "bulletproofs"
# Before doing a release:
# - update version field 
# - update html_root_url
# - update CHANGELOG
version = "4.0.0"
authors = ["Cathie Yun <cathieyun@gmail.com>", 
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>",
           "Michael Lodder <redmike7@gmail.com>",
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/zkcrypto/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs"
edition = "2021"

[dependencies]
bls12_381_plus = { version = "0.8", optional = true }
blstrs_plus = { version = "0.8", optional = true }
group = "0.13"
subtle = { version = "2.4", default-features = false }
sha3 = { version = "0.10", default-features = false }
digest = { version = "0.10", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc", "serde_derive"] }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
zeroize = "1"

[dev-dependencies]
hex = "0.4"
criterion = "0.5"
bincode = "1"
rand_chacha = "0.3"

[features]
default = ["blst", "std"]
blst = ["blstrs_plus"]
rust = ["bls12_381_plus"]
docs = ["nightly"]
nightly = ["subtle/nightly"]
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
yoloproofs = []


[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "linear_proof"
harness = false
